--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.0",
     "swiper": "^11.0.6",
     "use-local-storage-state": "^19.1.0"
