--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.0",
+    "react-tilt": "^1.0.2",
     "swiper": "^11.0.6",
     "use-local-storage-state": "^19.1.0"
   },
