added emailjs environment variables for form submission

--- a/.env_sample_file
+++ b/.env_sample_file
@@ -1,2 +1,5 @@
 VITE_REACT_APP_SANITY_PROJECT_ID = "sanity-app-project-id"
 VITE_REACT_APP_SANITY_TOKEN = "sanity-app-token"
+VITE_REACT_APP_EMAILJS_SERVICE_ID="YOUR_SERVICE_ID"
+VITE_REACT_APP_EMAILJS_TEMPLATE_ID="YOUR_TEMPLATE_ID"
+VITE_REACT_APP_EMAILJS_PUBLIC_KEY="YOUR_PUBLIC_KEY"
