--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@sanity/client": "^6.12.3",
     "@sanity/image-url": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.0",
     "react-tilt": "^1.0.2",
+    "sonner": "^2.0.3",
     "swiper": "^11.0.6",
     "use-local-storage-state": "^19.1.0"
   },
